// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smoke test 1`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="organization.delete"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      organization.delete
    </h1>
    <div
      className="page-description"
    >
      organization.delete.description
    </div>
  </header>
  <div>
    <button
      className="button-red"
      disabled={false}
      onClick={[Function]}
    >
      delete
    </button>
  </div>
</div>
`;

exports[`smoke test 2`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="organization.delete"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      organization.delete
    </h1>
    <div
      className="page-description"
    >
      organization.delete.description
    </div>
  </header>
  <div>
    <button
      className="button-red"
      disabled={true}
      onClick={[Function]}
    >
      delete
    </button>
    <Modal
      contentLabel="modal form"
      onRequestClose={[Function]}
    >
      <header
        className="modal-head"
      >
        <h2>
          organization.delete
        </h2>
      </header>
      <form
        onSubmit={[Function]}
      >
        <div
          className="modal-body"
        >
          organization.delete.question
        </div>
        <footer
          className="modal-foot"
        >
          <div>
            <button
              className="button-red"
              type="submit"
            >
              delete
            </button>
            <button
              className="button-link"
              onClick={[Function]}
              type="reset"
            >
              cancel
            </button>
          </div>
        </footer>
      </form>
    </Modal>
  </div>
</div>
`;

exports[`smoke test 3`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="organization.delete"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      organization.delete
    </h1>
    <div
      className="page-description"
    >
      organization.delete.description
    </div>
  </header>
  <div>
    <button
      className="button-red"
      disabled={true}
      onClick={[Function]}
    >
      delete
    </button>
    <Modal
      contentLabel="modal form"
      onRequestClose={[Function]}
    >
      <header
        className="modal-head"
      >
        <h2>
          organization.delete
        </h2>
      </header>
      <form
        onSubmit={[Function]}
      >
        <div
          className="modal-body"
        >
          organization.delete.question
        </div>
        <footer
          className="modal-foot"
        >
          <i
            className="spinner"
          />
        </footer>
      </form>
    </Modal>
  </div>
</div>
`;
